trelo.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      targetPort: 5432
      port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      targetPort: 6379
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: react-service
      port:
        number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  # Replica set:
  replicas: 2
  selector:
    matchLabels:
      app: react
  # Pod:
  template:
    metadata:
      labels:
        app: react
    spec:
      # Container:
      containers:
        - name: trelo
          image: trelo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  # Replica set:
  replicas: 2
  selector:
    matchLabels:
      app: node
  # Pod:
  template:
    metadata:
      labels:
        app: node
    spec:
      # Container:
      containers:
        - name: trelo-back
          imagePullPolicy: Never
          image: trelo-back:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  # Replica set:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  # Pod:
  template:
    metadata:
      labels:
        app: redis
    spec:
      # Container:
      containers:
        - name: redis
          image: redis:6.2.6-alpine
          command: [ "/bin/sh", "-c", "redis-server --requirepass SomePassword" ]
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  serviceName: postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-disk
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: postgres-disk
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: hostpath
        resources:
          requests:
            storage: 10Gi
